2002-11-08  Paul Eggert  <eggert@twinsun.com>

	* human.c (human_readable): Revamp to avoid warning about unused
	variable 'amt'.  Unfortunately this means using some gotos.

2002-11-08  Jim Meyering  <jim@meyering.net>

	* human.c (human_readable): Avoid warnings from gcc -Wshadow.

2002-11-06  Jim Meyering  <jim@meyering.net>

	* Makefile.am (EXTRA_DIST): Add inttostr.h.

2002-10-07  Paul Eggert  <eggert@twinsun.com>

	* Makefile.am (libfetish_a_SOURCES): Add imaxtostr.c, offtostr.c,
	umaxtostr.c.
	(EXTRA_DIST): Add inttostr.c.
	* inttostr.c, inttostr.h, imaxtostr.c, offtostr.c, umaxtostr.c:
	New files, taken from GNU tar.

	* human.c, human.h: Rewrite to support locale-specific
	notations like thousands separators.
	Specify what includer of include.h must include beforehand.
	(human_group_digits, human_suppress_point_zero, human_autoscale,
	human_base_1024, human_SI, human_B): New enum values.
	(human_readable): Rename from human_readable_inexact; put the
	options before the sizes.  All uses changed.  The old human_readable
	function has been removed; use inttostr.h instead.
	(human_options): Renamed from human_block_size, with new signature
	that allows block sizes up to UINTMAX_MAX.  All callers changed.

2002-10-13  Jim Meyering  <jim@meyering.net>

	* xnanosleep.c (initialized): Remove declaration now that it's unused.

2002-10-12  Paul Eggert  <eggert@twinsun.com>

	* xnanosleep.c: There's no need to futz with the rounding mode,
	since the code should work properly even in the default rounding mode.
	(<fenv.h>): Do not include.
	(#pragma STDC FENV_ACCESS ON): Remove.
	(xnanosleep): Don't futz with rounding state.

2002-10-06  Jim Meyering  <jim@meyering.net>

	* safe-read.c (safe_read): Change type of function
	from ssize_t to size_t.
	* safe-read.h: Update prototype.

2002-09-28  Jim Meyering  <jim@meyering.net>

	* makepath.c (make_path): Restore umask *before* creating the final
	component.

2002-09-25  Paul Eggert  <eggert@twinsun.com>
